k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ostad

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: japan-deployment
  namespace: ostad
spec:
  replicas: 3
  selector:
    matchLabels:
      app: japan
  template:
    metadata:
      labels:
        app: japan
    spec:
      containers:
        - name: japan-container
          image: farhansabbir/next-japan:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
